--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@formspree/react": "^2.3.3",
     "@googlemaps/react-wrapper": "^1.1.35",
+    "@googlemaps/typescript-guards": "^2.0.3",
+    "@react-google-maps/api": "^2.13.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,11 +14,13 @@
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "fast-equals": "^4.0.3",
     "nodemailer": "^6.7.8",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-icons": "^1.8.2",
     "react-dom": "^18.1.0",
+    "react-iframe": "^1.8.4",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-multi-carousel": "^2.8.1",
     "react-on-screen": "^2.1.1",
